--- a/public/styles.css
+++ b/public/styles.css
@@ -106,3 +106,10 @@ h1 {
 .active-board {
     border: 3px solid yellow;
 }
+.winner-X {
+    border: 3px solid blue; /* Estilo para vitória do X */
+}
+
+.winner-O {
+    border: 3px solid red; /* Estilo para vitória do O */
+}
